--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div id="plot"></div>
-    <script src="static/js/data.js"></script>
-    <script src="static/js/plots.js"></script>
+    <script src="data.js"></script>
+    <script src="plots.js"></script>
 </body>
 </html>
